--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://MuhammedMohsn.github.io/E-Commerce/",
+    "homepage": "https://MuhammedMohsn.github.io/E-Commerce",
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
