--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "homepage": "https://MuhammedMohsn.github.io/E-Commerce",
-    "name": "my-app",
+    "name": "e-commerce",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
